update project and resume

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p class="hero-bio">Building smart, responsive, and impactful web experiences.</p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View Projects</a>
-                        <a href="assets/resume.pdf" class="btn btn-secondary" download>
+                        <a href="aftabResume.pdf" class="btn btn-secondary" download>
                             <i class="fas fa-download"></i> Download Resume
                         </a>
                     </div>
@@ -283,39 +283,43 @@
                 <button class="filter-btn" data-filter="app-dev">App Development</button>
             </div>
             <div class="projects-grid">
-                <div class="project-card" data-category="web-dev">
+                <div class="project-card" data-category="web-dev web-design">
                     <div class="project-image">
-                        <img src="assets/project1.jpg" alt="News Aggregator" loading="lazy">
+                        <img src="https://i.postimg.cc/2yxcMMjq/temp-Imagec-Crrk-L.avif" loading="lazy">
                     </div>
                     <div class="project-content">
-                        <h3>Responsive News Aggregator Web App</h3>
+                        <h3>ABHI TAK - News Aggregator Web App</h3>
                         <div class="project-stack">
                             <span class="stack-tag">HTML</span>
                             <span class="stack-tag">CSS</span>
                             <span class="stack-tag">JavaScript</span>
+                             <span class="stack-tag">Node JS</span>
+                              <span class="stack-tag">API Fetching</span>
                         </div>
                         <p>A modern news aggregator with filters, bookmarks, dark mode, and mobile-first design.</p>
                         <div class="project-buttons">
-                            <a href="#" class="btn btn-small">View Code</a>
-                            <a href="#" class="btn btn-small btn-secondary">Live Demo</a>
+                            <a href="https://github.com/aftabahamad26/AABHITAK" class="btn btn-small">View Code</a>
+                            <a href="https://aabhitak.vercel.app/" class="btn btn-small btn-secondary">Live Demo</a>
                         </div>
                     </div>
                 </div>
-                <div class="project-card" data-category="web-dev">
+                <div class="project-card" data-category="other">
                     <div class="project-image">
-                        <img src="assets/project2.jpg" alt="Customizable News Aggregator" loading="lazy">
+                        <img src="https://i.postimg.cc/VNQrwmgS/temp-Image-Vs-Bd-Eg.avif" alt="Customizable News Aggregator" loading="lazy">
                     </div>
                     <div class="project-content">
-                        <h3>Customizable News Aggregator</h3>
+                        <h3>MEDIREACH - Smart Healthcare Assistance Platform </h3>
                         <div class="project-stack">
-                            <span class="stack-tag">JavaScript</span>
-                            <span class="stack-tag">HTML</span>
-                            <span class="stack-tag">CSS</span>
+                            <span class="stack-tag">Flask</span>
+                            <span class="stack-tag">React.js</span>
+                            <span class="stack-tag">AI</span>
+                            <span class="stack-tag">Web APIs</span>
                         </div>
-                        <p>Pure JS/HTML/CSS implementation with modular and scalable layout design.</p>
+                        <p>Developed a multilingual platform for symptom diagnosis, ambulance tracking & hospital discovery.
+                            Integrated Google Maps, WebSockets & Translate APIs for accessibility .</p>
                         <div class="project-buttons">
-                            <a href="#" class="btn btn-small">View Code</a>
-                            <a href="#" class="btn btn-small btn-secondary">Live Demo</a>
+                            <a href="https://github.com/aftabahamad26/MediReach" class="btn btn-small">View Code</a>
+                            <a href="https://medi-reach.vercel.app" class="btn btn-small btn-secondary">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -330,13 +334,13 @@
             <div class="resume-content">
                 <div class="resume-download">
                     <h3>Download Resume</h3>
-                    <a href="assets/resume.pdf" class="btn btn-primary" download>
+                    <a href="aftabResume.pdf" class="btn btn-primary" download>
                         <i class="fas fa-download"></i> Download PDF
                     </a>
                 </div>
                 <div class="certificates">
                     <h3>Certificates</h3>
-                    <div class="certificate-item" onclick="window.open('https://drive.google.com/drive/folders/your-folder-id', '_blank')">
+                    <div class="certificate-item" onclick="window.open('https://drive.google.com/drive/folders/1GGADtquXggDsVqVLg-k1tKwLXaEONgR2', '_blank')">
                         <div class="certificate-icon">
                             <i class="fas fa-certificate"></i>
                         </div>
@@ -355,15 +359,15 @@
             <h2 class="section-title">Contact</h2>
             <div class="contact-content">
                 <div class="contact-map">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.2233913121413!2d77.8493!3d28.4089!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjjCsDI0JzMyLjAiTiA3N8KwNTAnNTcuNSJF!5e0!3m2!1sen!2sin!4v1234567890"
-                        width="100%" 
-                        height="300" 
-                        style="border:0;" 
-                        allowfullscreen="" 
-                        loading="lazy" 
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+            <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d59921.30134752802!2d77.755937!3d28.4618224!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x390ca2c8a8f56925%3A0xf97a46aea234ea59!2sIsmailpur%20Uttar%20Pradesh%20203205!3m2!1d28.4618224!2d77.755937!5e1!3m2!1sen!2sin!4v1754804216072!5m2!1sen!2sin"
+                                width="100%"
+                                height="400"
+                                style="border:0;"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                 </div>
                 <div class="contact-form">
                     <form id="contact-form">
@@ -394,19 +398,19 @@
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-linkedin"></i>
-                        <a href="#" target="_blank">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/aftab-ahamad-195410258/" target="_blank">LinkedIn</a>
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-github"></i>
-                        <a href="#" target="_blank">GitHub</a>
+                        <a href="https://github.com/aftabahamad26" target="_blank">GitHub</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-code"></i>
-                        <a href="#" target="_blank">Codelio</a>
+                        <a href="https://codolio.com/profile/aftabahamad" target="_blank">Codelio</a>
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-twitter"></i>
-                        <a href="#" target="_blank">Twitter</a>
+                        <a href="https://x.com/iaftab7_" target="_blank">Twitter</a>
                     </div>
                 </div>
             </div>
